# Computer-networks-Radio

./: CMakeLists.txt  README.md  RexmitEvent.h  common.cpp  common.h  gui.cpp  gui.h  makefile  poll.cpp  poll.h  remove.sh  sikradio-receiver.cpp  sikradio-receiver.h  sikradio-sender.cpp  sikradio-sender.h
test/: generate_data.py  info  regex_test.cpp  test_thread.cpp  test_thread2.cpp
